test_programs/compile_failure/noirc_frontend_tests_check_trait_wrong_parameter/src/main.nr

    trait Default {
        fn default(x: Field) -> Self;
    }

    struct Foo {
        bar: u32,
    }

    impl Default for Foo {
        fn default(x: u32) -> Self {
            Foo {bar: x}
        }
    }

    fn main() {
    }
    